# k2i

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  claude.md  dist-workspace.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: docker-publish.yml  release.yml  semver-check.yml  test.yml
config/: example.toml
crates/k2i-cli/: Cargo.toml
crates/k2i-cli/src/: main.rs  server.rs
crates/k2i-cli/src/commands/: completions.rs  dev.rs  ingest.rs  maintenance.rs  mod.rs  status.rs  table.rs
crates/k2i-cli/tests/: man_pages.rs
crates/k2i-core/: Cargo.toml
crates/k2i-core/src/: backfill.rs  circuit_breaker.rs  config.rs  error.rs  health.rs  lib.rs
crates/k2i-core/src/buffer/: eviction.rs  hot_buffer.rs  mod.rs
crates/k2i-core/src/engine/: ingestion.rs  mod.rs
crates/k2i-core/src/format/: mod.rs
crates/k2i-core/src/format/protobuf/: frame.rs  mod.rs  registry.rs
crates/k2i-core/src/iceberg/: catalog.rs  factory.rs  glue.rs  hive.rs  metadata_cache.rs  mod.rs  nessie.rs  official.rs  rest_api.rs  schema_evolution.rs  sql.rs  table_manager.rs  transaction_coordinator.rs  writer.rs
crates/k2i-core/src/kafka/: consumer.rs  mod.rs  offset.rs
crates/k2i-core/src/maintenance/: compaction.rs  expiration.rs  mod.rs  orphan.rs  scheduler.rs  statistics.rs
crates/k2i-core/src/metrics/: mod.rs  prometheus.rs
crates/k2i-core/src/read/: mod.rs
crates/k2i-core/src/txlog/: entries.rs  log.rs  mod.rs  recovery.rs
crates/k2i-core/tests/: integration_tests.rs
crates/k2i-e2e-runner/: Cargo.toml
crates/k2i-e2e-runner/src/: main.rs
crates/k2i-rpc/: Cargo.toml
crates/k2i-rpc-server/: Cargo.toml
crates/k2i-rpc-server/examples/: fixture_server.rs
crates/k2i-rpc-server/src/: lib.rs
crates/k2i-rpc/examples/: dump_fixtures.rs
crates/k2i-rpc/src/: lib.rs
docker/e2e/: README.md  compose.backfill.yml  compose.iceberg.load.yml  compose.iceberg.yml  compose.load.yml  compose.yml  k2i.backfill.toml  k2i.e2e.toml  k2i.iceberg.load.toml  k2i.iceberg.toml  k2i.load.toml  runner.Dockerfile
docs/: README.md  architecture.md  commands.md  comparisons.md  competitive-analysis-exec-summary.md  competitive-positioning.md  configuration.md  deployment.md  duckdb-iceberg-validation.md  faq.md  how-your-solution-wins.md  iceberg-rest-catalog.md  iceberg_catalog_prd.md  implementation-patterns-gotchas.md  kafka-iceberg-cli-prd.md  kafka-iceberg-problems-analysis.md  kafka-to-iceberg.md  moonlink-architecture-analysis.md  moonlink-competitive-analysis.md  mvp-prd.md  production-readiness.md  quickstart.md  schema-registry-protobuf.md  troubleshooting.md  whitepaper.md
docs/archive/: README.md  competitive-analysis-exec-summary.md  competitive-positioning.md  how-your-solution-wins.md  iceberg-compaction.md  iceberg_catalog_prd.md  implementation-patterns-gotchas.md  kafka-iceberg-cli-prd.md  kafka-iceberg-problems-analysis.md  moonlink-architecture-analysis.md  moonlink-competitive-analysis.md  mvp-prd.md  whitepaper.md
docs/archive/website/: diagram.html  landing-page.md
docs/man/: README.md
docs/man/man1/: k2i-completions-bash.1  k2i-completions-fish.1  k2i-completions-help.1  k2i-completions-man.1  k2i-completions-power-shell.1  k2i-completions-zsh.1  k2i-completions.1  k2i-dev.1  k2i-help.1  k2i-ingest.1  k2i-maintenance-clean-orphans.1  k2i-maintenance-compact.1  k2i-maintenance-expire-snapshots.1  k2i-maintenance-help.1  k2i-maintenance.1  k2i-status.1  k2i-table-help.1  k2i-table-register.1  k2i-table-reset.1  k2i-table.1  k2i-validate.1  k2i.1
docs/website/: landing-page.md
scripts/: e2e-docker-backfill.sh  e2e-docker-iceberg-load.sh  e2e-docker-iceberg.sh  e2e-docker-load.sh  e2e-docker.sh  security-audit.sh
seo-research/output/: k2i-content-implementation-plan.md  k2i-readme-docs-plan.md  keyword-masterlist.csv
