[package]
name = "k2i-rpc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Unix socket server for K2I real-time read state RPC"
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
k2i-core.workspace = true
k2i-rpc.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
