[package]
name = "k2i-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Wire protocol types for K2I real-time read state RPC"
repository.workspace = true
rust-version.workspace = true

[dependencies]
bincode.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
